# hollowdeep

./: .gitignore  Cargo.toml  README.md  install-windows.cmd  install.bat  install.ps1  install.sh
assets/data/: enemies.ron  items.ron  skills.ron  synergies.ron
src/: lib.rs  main.rs
src/audio/: manager.rs  mod.rs  sounds.rs
src/combat/: abilities.rs  damage.rs  mod.rs  stats.rs  status.rs
src/data/: enemies.rs  items.rs  loader.rs  mod.rs  synergies.rs
src/ecs/: components.rs  mod.rs  resources.rs  systems.rs
src/entities/: bosses.rs  chests.rs  enemies.rs  mod.rs  npcs.rs  player.rs  spawner.rs
src/game/: mod.rs  state.rs  time.rs  turn.rs
src/graphical/: app.rs  colors.rs  input.rs  mod.rs  renderer.rs
src/items/: equipment.rs  grid.rs  inventory.rs  item.rs  loot.rs  mod.rs  synergies.rs
src/mods/: hooks.rs  loader.rs  lua_api.rs  mod.rs
src/progression/: difficulty.rs  mod.rs  skills.rs  unlocks.rs  xp.rs
src/render/: animation.rs  kitty.rs  mod.rs  mode.rs  sprites.rs  tilemap.rs
src/save/: mod.rs  profile.rs  save_game.rs
src/ui/: app.rs  input.rs  mod.rs
src/ui/screens/: character.rs  combat.rs  game.rs  inventory.rs  map.rs  menus.rs  mod.rs
src/ui/widgets/: grid_inventory.rs  healthbar.rs  message_log.rs  minimap.rs  mod.rs
src/world/: fov.rs  map.rs  mod.rs  tile.rs
src/world/generation/: biomes.rs  caves.rs  mod.rs  rooms.rs  templates.rs
